# ontogent

./: .coverage  .gitignore  LICENSE  README.md  env.template  environment.yml  main.py  pyproject.toml  setup.py  setup_env.sh  test_environment.py
.github/workflows/: ci.yml
docs/: architecture.md
examples/: basic_usage.py
ontogent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  config.py  main.py
src/models/: __init__.py  uberon.py
src/services/: __init__.py  agent.py  llm.py  uberon.py
src/tools/: check_api.py  check_api.sh
src/utils/: __init__.py  logging_utils.py
tests/: test_agent.py  test_agent_error_handling.py  test_llm_service.py  test_logging_utils.py  test_main.py  test_uberon_service.py  test_uberon_service_extended.py
tests/tools/: test_check_api.py
